syntax = "proto3";
package RaaLabs.TimeSeries.Compression.Protobuf;

message DataPoint {
    bytes timeSeries = 1;
    uint64 timestamp = 2;

    oneof measurement {
        float value = 3;
        Coordinate coordinate = 4;
    }
}

message Coordinate {
    float longitude = 1;
    float latitude = 2;
}

message TimeSeriesFrame {
    bytes timeSeries = 1;
    uint64 timestamp = 2;                                   // timestamp for the first data point

    oneof payload {
        bytes compressedPayload = 4;                        // Contains a TimeSeriesPayload compressed using zlib
        TimeSeriesPayload uncompressedPayload = 5;
    }
}

message TimeSeriesPayload {
    message Values {
        repeated float value = 1 [packed=true];             // must be the same length as timestep
    }

    message Coordinates {
        repeated float longitudes = 1 [packed=true];        // must be the same length as timestep
        repeated float latitudes = 2 [packed=true];         // must be the same length as timestep
    }

    uint64 lastTimestamp = 1;
    repeated uint64 timestep = 2 [packed=true];             // milliseconds since last data point
    oneof payload {
        Values values = 3;
        Coordinates coordinates = 4;
    }
}